--- a/translations/messages.la.yaml
+++ b/translations/messages.la.yaml
@@ -39,6 +39,7 @@ bauer.grundlovsdag: " "
 bauer.sankthans: Fest Nat St Johs Baptistae"
 bauer.syvsoverdag: 7 dormientes
 bauer.mariæbesøg: Visitationes Mariae
+bauer.assumptio: Assumptio Mariae
 bauer.dominicus: Dies Donatus
 bauer.donatus: Dies Donatus
 bauer.mikkelsdag: Fest archangeli Michaelis
