--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,27 +1,27 @@
 ---
 # Ugedagene
-bauer.mandag: mandag
-bauer.tirsdag: tirsdag
-bauer.onsdag: onsdag
-bauer.torsdag: torsdag
-bauer.fredag: fredag
-bauer.lørdag: lørdag
-bauer.søndag: søndag
+bauer.mandag: monday
+bauer.tirsdag: tuesday
+bauer.onsdag: wednesday
+bauer.torsdag: thursday
+bauer.fredag: freiday
+bauer.lørdag: saturday
+bauer.søndag: sunday
 # Månederne
-bauer.januar: januar
-bauer.februar: februar
-bauer.marts: marts
+bauer.januar: january
+bauer.februar: february
+bauer.marts: march
 bauer.april: april
-bauer.maj: maj
-bauer.juni: juni
-bauer.juli: juli
+bauer.maj: may
+bauer.juni: junu
+bauer.juli: july
 bauer.august: august
 bauer.september: september
-bauer.oktober: oktober
+bauer.oktober: october
 bauer.november: november
 bauer.december: december
 # Faste datoer
-bauer.nytår: Nytårsdag
+bauer.nytår: New Year's Day
 bauer.nytårTT: <h6>Nytårsdag</h6><p class='text-left'>Kristi omskærelsesdag<br>Festum Novi Anni<br>Festum Circumcisionis Domini</p>
 bauer.h3k: Hellig 3 konger
 bauer.h3kTT: <h6>Helligtrekonger</h6><p>Dom. Baptismus Christi<br>Dom. Ephiphania</p><p>Helligdag indtil 1770<p>
@@ -34,7 +34,7 @@ bauer.h3k6: 6. S efter H3K
 bauer.paulus: Paulus' omvendelse
 bauer.kyndelmisse: Kyndelmisse
 bauer.kyndelmisseTT: <h6>Kyndelmisse</h6><p class='text-left'>Maria renselsesdag<br>Dies Mariae Cerealis<br>Dies Praesentatio Domini<br>Dom. Purificatio Mariae Virginis</p><p>Helligdag indtil 1770</p>
-bauer.1maj: "1. Maj"
+bauer.1maj: ""
 bauer.mariæbebud: Maria bebudelse
 bauer.mariæbebudTT: <h6>Maria Bebudelse</h6><p class='text-left'>Annuntiatio Mariae Virginis<br>Dies Evangelismi<br>Dies Incarnationis<br>Dies Salutationis</p><p>Helligdag indtil 1770</p>
 bauer.grundlovsdag: Grundlovsdag
@@ -145,10 +145,10 @@ bauer.advent2: 2. S i Advent
 bauer.advent3: 3. S i Advent
 bauer.advent4: 4. S i Advent
 # Juledagene
-bauer.juleaften: Juleaftensdag
-bauer.juledag: Juledag
-bauer.2juledag: 2. Juledag
-bauer.3juledag: 3. Juledag
+bauer.juleaften: ""
+bauer.juledag: Christmas Day
+bauer.2juledag: Boxing day
+bauer.3juledag: ""
 bauer.3juledagTT: <h6>3. Juledag</h6><p>Festum St. Johannis Evangelistae</p><p>Helligdag indtil 1770</p>
 
 
