Forsiden: yderligere revisioner med oversættelser

--- a/translations/messages.da.yaml
+++ b/translations/messages.da.yaml
@@ -155,5 +155,7 @@ bauer.2juledag: 2. Juledag
 bauer.3juledag: 3. Juledag
 bauer.3juledagTT: <h6>3. Juledag</h6><p>Festum St. Johannis Evangelistae</p><p>Helligdag indtil 1770</p>
 
+bauer.tilgængelige: Tilgængelige kalendere
+
 
 
