--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -151,4 +151,7 @@ bauer.2juledag: Boxing day
 bauer.3juledag: ""
 bauer.3juledagTT: <h6>3. Juledag</h6><p>Festum St. Johannis Evangelistae</p><p>Helligdag indtil 1770</p>
 
+bauer.description: Calendar tool for genealogists and other good people working with old church records
+bauer.tilgængelige: Available calendars
+bauer.kommer-snart: Coming soon...
 
