--- a/translations/messages.no.yaml
+++ b/translations/messages.no.yaml
@@ -154,4 +154,9 @@ bauer.2juledag: 2. Juledag
 bauer.3juledag: 3. Juledag
 bauer.3juledagTT: <h6>3. Juledag</h6><p>Festum St. Johannis Evangelistae</p><p>Helligdag indtil 1770</p>
 
+bauer.description: Kalenderverktøy for slektsforskere og andre flinke folk som jobber med gamle kirkebøker
+bauer.tilgængelige: Tilgjengelige kalendere
+
+bauer.kommer-snart: På veien...
+
 
