--- a/translations/messages.sv.yaml
+++ b/translations/messages.sv.yaml
@@ -152,4 +152,7 @@ bauer.2juledag: Annandag Jul
 bauer.3juledag:
 bauer.3juledagTT:
 
+bauer.description: Kalenderverktyg för släktforskare och annat gott folk som arbetar med gamla kyrkböcker
+bauer.tilgængelige: Tillgängliga kalendrar
 
+bauer.kommer-snart: På vägen..,
