--- a/translations/messages.da.yaml
+++ b/translations/messages.da.yaml
@@ -157,5 +157,5 @@ bauer.3juledagTT: <h6>3. Juledag</h6><p>Festum St. Johannis Evangelistae</p><p>H
 
 bauer.tilgængelige: Tilgængelige kalendere
 
-
+meta.keywords: Slægtsforskning, Kirkebøger, Bauers kalender, kalender
 
